--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
 <!-- CSS stylesheet -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
       </div>
     
      <div class="col-lg-6">
-      <img class="iphone-img" src="images/iphone6.png" alt="iphone-mockup">
+      <img class="iphone-img" src="iphone6.png" alt="iphone-mockup">
      </div>
     </div> 
   </div>
@@ -108,12 +108,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonials-img" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonials-img" src="dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em> 
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2> 
-          <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonials-img" src="lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em> 
         </div>
 
@@ -137,10 +137,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-img" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-img" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-img" src="techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="tnw.png" alt="tnw-logo">
+    <img class="press-img" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-img" src="mashable.png" alt="mashable-logo">
 
   </section>
 
